--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <h1>Notes app</h1>
+    
     <div id="main-container">
-
-      
+      <input type="text" id="message-input" />
+      <button id="note-button">Add note</button>
     </div>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
