Emoji functionality added

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <link rel="stylesheet" href="style.css">
     <title>Notes app</title>
   </head>
   <body>
     <h1>Notes app</h1>
     
     <div id="main-container">
-      <input type="text" id="message-input" />
+      <input type="text" id="message-input" placeholder="What's on your mind?" />
       <button id="note-button">Add note</button>
     </div>
     <script type="text/javascript" src="bundle.js"></script>
