Reset all notes button added

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -11,8 +11,11 @@
     <h1>Notes app</h1>
     
     <div id="main-container">
-      <input type="text" id="message-input" placeholder="What's on your mind?" />
-      <button id="note-button">Add note</button>
+      <div id="input-container">
+          <input type="text" id="message-input" placeholder="What's on your mind?" />
+            <button id="note-button">Add note</button>
+            <button id="reset-button">Reset all notes</button>
+      </div>
     </div>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
